# Automate-News-Updater

./: .gitignore  README.md  entry_point.sh  pyproject.toml  requirements.txt  test.ipynb  test.py  test2.py
.trunk/: trunk.yaml
news_crawler/src/config/: firecrawler.yaml
news_crawler/src/scraping/: __init__.py  scraper.py
news_crawler/src/scraping/from_github/: crawl.py  github.py
news_crawler/src/scraping/from_org/hf/: __init__.py  cfg.py  crawl.py
news_crawler/src/scraping/from_org/unsloth/: __init__.py  cfg.py  crawl.py
news_crawler/src/utility/: __init__.py
news_crawler/src/utility/error/: __init__.py  base.py  error.py
news_crawler/src/utility/logger/: __init__.py  logger.py
news_crawler/src/utility/settings/: __init__.py  crawler_settings.py  models.py
routers/: chutes_test.ipynb  cloudfare_test.ipynb  groq_test.ipynb  openrouter_test.ipynb  togetherai_test.ipynb
script/: poepip.sh  virtualenv.sh
