[tool.poetry]
name = "news-crawler"
version = "0.1.0"
description = "Crawl and summarize news from Twitter and LinkedIn"
authors = ["tnt305 <thiendc3005@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "news_crawler" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = "^2.2.3"
numpy = "^2.0"
tqdm = "^4.67.1"
transformers = "^4.49.0"
scrapy = {version = "2.11.2", allow-prereleases = true}
opencv-python = "^4.11.0.86"
loguru = { version = "^0.7.3", allow-prereleases = true }
accelerate = "0.29.0"
pydantic = "^2.10.6"
selenium = "^4.29.0"
webdriver-manager = "^4.0.2"
twikit = "^2.3.3"
crawlee = {extras = ["playwright"], version = "^0.6.3"}
linkedin-api = "^2.3.1"
bs4 = "^0.0.2"
lxml = "^5.3.1"
beautifulsoup4 = "^4.13.3"
psycopg2 = "^2.9.10"

[tool.poetry.group.dev.dependencies]
tqdm = "^4.67.1"
scrapy = "^2.11.2"
opencv-python = "^4.11.0.86"
accelerate = "0.29.0"
isort = "^6.0.1"
pydantic = "^2.10.6"
blank = "^0.1.0"
black = "^25.1.0"
ipykernel = "^6.29.5"
selenium = "^4.29.0"
webdriver-manager = "^4.0.2"
twikit = "^2.3.3"
crawlee = {extras = ["playwright"], version = "^0.6.3"}
bs4 = "^0.0.2"
psycopg2 = "^2.9.10"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu126"
priority = "supplemental"

[[tool.poetry.source]]
name = "torchvision"
url = "https://download.pytorch.org/whl/cu126"
priority = "supplemental"

[[tool.poetry.source]]
name = "torchaudio"
url = "https://download.pytorch.org/whl/cu126"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"